--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     list-style: none;
     padding-left: 1rem;
     padding-bottom: .5rem;
-    padding-top: 3rem;
+    padding-top: 1rem;
 }
 main{
     max-width: 1200px;
@@ -35,4 +35,10 @@ h2{
 h3{
     padding-top: 1rem;
     padding-bottom: 1rem ;
+}
+p{
+    padding: .5rem 0;
+}
+ol{
+    padding: .5rem 1rem;
 }
